--- a/frontend/style.css
+++ b/frontend/style.css
@@ -39,6 +39,10 @@ main {
   transform-origin: 0.5em 50%;
 }
 
+.btn-toggle.no-before::before {
+  content: none;
+}
+
 .btn-toggle[aria-expanded="true"] {
   color: rgba(0, 0, 0, 0.85);
 }
