study detail page created plus its implementation in backend

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -131,3 +131,9 @@ main {
   height: 15vw;
   object-fit: cover;
 }
+
+@media (min-width: 1024px) {
+  .content-container {
+      width: 100%; /* 100% of the viewport width */
+  }
+}
