long link UI bug is fixed

--- a/frontend/css/general_styles.css
+++ b/frontend/css/general_styles.css
@@ -180,3 +180,8 @@ main {
 .list-group-item:hover {
   background-color: white;
 }
+
+#study-info {
+  overflow-wrap: break-word;
+  overflow-x: auto; /* Horizontal scrollbar only when needed */
+}
